--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: HA Client
 description: Native Android client for Home Assistant
 theme: jekyll-theme-cayman
+show_downloads: "true"
+google_analytics: UA-125755611-4
