--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: HA Client
 description: Native Android client for Home Assistant
 theme: jekyll-theme-cayman
 google_analytics: UA-125755611-4
+repository_url: https://github.com/estevez-dev/ha_client
