--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: HA Client
-description: Native Android client for Home Assistant
+description: Truly native Home Assistant experience
 theme: jekyll-theme-cayman
 google_analytics: UA-125755611-4
 repository_url: https://github.com/estevez-dev/ha_client
